[package]
name = "fetch"
version = "0.1.0"
edition = "2021"
description = "A small fetch tool written in rust"
license = "BSD-4-Clause"
repository = "https://gitlab.com/SpamixOfficial/fetch"
keywords = ["fetch", "system-info"]
categories = ["command-line-utilities"]

[dependencies]
taap = "0.1.1"
toml = "^0.8"
dirs = "5.0.1"
json = "0.12.4"

[dependencies.serde]
version = "^1.0"
features = [
    "derive"
]

[dependencies.nix]
version = "^0.27"
features = [
    "feature"
]
